--- a/aula28.html
+++ b/aula28.html
@@ -19,7 +19,7 @@
     <main>
         <article>
 
-            <h2>Number</h2>
+            <h2>Aula 28 - Number</h2>
 
             <h3>Nunca faça cálculos com decimais</h3>
 
@@ -141,10 +141,10 @@
 
             <pre>
                 <code>
-                    Matah.floor(10.3);
-                    Matah.floor(10.7);
-                    Matah.floor(-10.3);
-                    Matah.floor(-10.7);
+                    Math.floor(10.3);
+                    Math.floor(10.7);
+                    Math.floor(-10.3);
+                    Math.floor(-10.7);
                 </code>
             </pre>
 
