--- a/aula29.html
+++ b/aula29.html
@@ -17,7 +17,7 @@
 
 		<main>
 			<article>
-				<h2>String</h2>
+				<h2>Aula 29 - String</h2>
 
 				<p>
 					Vamos aprender algumas propriedades e métodos de String, caso queira
@@ -203,7 +203,7 @@
 				<p>
 					O método substring() retorna uma substring de uma string. Esse método
 					recebe dois parâmetros, o primeiro é o índice do primeiro caractere, e
-					o segundo é o comprimento da substring desejada, veja o exemplo:
+					o segundo é o último caractere (não incluindo), veja o exemplo:
 				</p>
 
 				<pre>
