--- a/aula30.html
+++ b/aula30.html
@@ -17,7 +17,7 @@
 
     <main>
       <article>
-        <h2>Array</h2>
+        <h2>Aula 30 - Array</h2>
 
         <p>
           Vamos aprender propriedades e métodos de arrays, para ter uma lista
