--- a/aula32.html
+++ b/aula32.html
@@ -63,8 +63,8 @@
 
 				<pre>
 					<code>
-						&lt;input id="idDoBotao" type="button" value="Clique Aqui!"/&gt;
-						&lt;script src="app.js"&gt;&lt;/script&gt;
+	&lt;input id="idDoBotao" type="button" value="Clique Aqui!"/&gt;
+	&lt;script src="app.js"&gt;&lt;/script&gt;
 					</code>
 				</pre>
 
@@ -72,10 +72,10 @@
 
 				<pre>
 					<code>
-						let botao = document.getElementById("idDoBotao");
-						botao.addEventListener('click', function(){
-							alert("Obrigado por clicar!");
-						});
+	let botao = document.getElementById("idDoBotao");
+	botao.addEventListener('click', function(){
+		alert("Obrigado por clicar!");
+	});
 					</code>
 				</pre>
 
@@ -100,8 +100,8 @@
 
 				<pre>
 					<code>
-						&lt;input id="idDoBotao" type="button" value="Clique Aqui!"/&gt;
-						&lt;script src="app.js"&gt;&lt;/script&gt;
+	&lt;input id="idDoBotao" type="button" value="Clique Aqui!"/&gt;
+	&lt;script src="app.js"&gt;&lt;/script&gt;
 					</code>
 				</pre>
 
@@ -109,17 +109,17 @@
 
 				<pre>
 					<code>
-						let botao = document.getElementById("idDoBotao");
-						botao.addEventListener("click", function() {
-							document.body.style.backgroundColor =
-								"rgb(" +
-								Math.floor(Math.random() * 256) +
-								"," +
-								Math.floor(Math.random() * 256) +
-								"," +
-								Math.floor(Math.random() * 256) +
-								")";
-						});
+	let botao = document.getElementById("idDoBotao");
+	botao.addEventListener("click", function() {
+		document.body.style.backgroundColor =
+			"rgb(" +
+			Math.floor(Math.random() * 256) +
+			"," +
+			Math.floor(Math.random() * 256) +
+			"," +
+			Math.floor(Math.random() * 256) +
+			")";
+	});
 					</code>
 				</pre>
 
@@ -134,9 +134,9 @@
 
 				<pre>
 					<code>
-						&lt;h1 id="meuH1"&gt;Passe o Mouse em cima!&lt;/h1&gt;
-						&lt;h2 id="meuH2"&gt;&lt;/h2&gt;
-						&lt;script src="app.js"&gt;&lt;/script&gt;
+	&lt;h1 id="meuH1"&gt;Passe o Mouse em cima!&lt;/h1&gt;
+	&lt;h2 id="meuH2"&gt;&lt;/h2&gt;
+	&lt;script src="app.js"&gt;&lt;/script&gt;
 					</code>
 				</pre>
 
@@ -144,12 +144,12 @@
 
 				<pre>
 					<code>
-						let h1 = document.getElementById("meuH1");
-						let h2 = document.getElementById("meuH2");
-						h1.addEventListener("mouseover", function() {
-							h2.textContent = "Olá Mundo!";
-							h1.style.color = "red";
-						});
+	let h1 = document.getElementById("meuH1");
+	let h2 = document.getElementById("meuH2");
+	h1.addEventListener("mouseover", function() {
+		h2.textContent = "Olá Mundo!";
+		h1.style.color = "red";
+	});
 					</code>
 				</pre>
 
@@ -167,12 +167,12 @@
 
 				<pre>
 					<code>
-							&lt;div&gt;
-									&lt;div id="bg-img"&gt;&lt;/div&gt;
-								&lt;/div&gt;
-								&lt;div&gt;
-									&lt;h1&gt;Homem de Ferro, ferrado no espaço.&lt;/h1&gt;
-							&lt;/div&gt;
+	&lt;div&gt;
+		&lt;div id="bg-img"&gt;&lt;/div&gt;
+	&lt;/div&gt;
+	&lt;div&gt;
+		&lt;h1&gt;Homem de Ferro, ferrado no espaço.&lt;/h1&gt;
+	&lt;/div&gt;
 					</code>
 				</pre>
 
@@ -180,25 +180,25 @@
 
 				<pre>
 					<code>
-							* {
-								margin: 0;
-								padding: 0;
-								box-sizing: border-box;
-							}
-							#bg-img {
-								background: url("https://i.imgur.com/oFK7wf5.jpg");
-								background-attachment: fixed;
-								background-size: cover;
-							}
-							div {
-								min-height: 100vh;
-								background-color: black;
-							}
-							h1 {
-								color: white;
-								text-align: center;
-								padding-top: 25%;
-							}
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+	#bg-img {
+		background: url("https://i.imgur.com/oFK7wf5.jpg");
+		background-attachment: fixed;
+		background-size: cover;
+	}
+	div {
+		min-height: 100vh;
+		background-color: black;
+	}
+	h1 {
+		color: white;
+		text-align: center;
+		padding-top: 25%;
+	}
 					</code>
 				</pre>
 
@@ -206,10 +206,105 @@
 
 				<pre>
 					<code>
-							window.addEventListener("scroll", function() {
-								let bg = document.getElementById("bg-img");
-								bg.style.opacity = 1 - pageYOffset / 650;
-							});
+	window.addEventListener("scroll", function() {
+		let bg = document.getElementById("bg-img");
+		bg.style.opacity = 1 - pageYOffset / 650;
+	});
+					</code>
+				</pre>
+
+				<h3>Exercício</h3>
+
+				<h4>Calculadora</h4>
+
+				<p>
+					O professor criou uma calculadora muito bonita usando HTML e CSS. Mas
+					ela não funciona. :(
+				</p>
+				<p>Sua missão é fazer ela funcionar usando JavaScript! Boa sorte!</p>
+
+				<p>index.html</p>
+
+				<pre>
+					<code>
+	&lt;div id="container"&gt;
+		&lt;span id="tela">&lt;/span&gt;
+		&lt;div&gt;7&lt;/div&gt;
+		&lt;div&gt;8&lt;/div&gt;
+		&lt;div&gt;9&lt;/div&gt;
+		&lt;div&gt;/&lt;/div&gt;
+		&lt;div&gt;%&lt;/div&gt;
+		&lt;div&gt;4&lt;/div&gt;
+		&lt;div&gt;5&lt;/div&gt;
+		&lt;div&gt;6&lt;/div&gt;
+		&lt;div&gt;*&lt;/div&gt;
+		&lt;div&gt;(&lt;/div&gt;
+		&lt;div&gt;1&lt;/div&gt;
+		&lt;div&gt;2&lt;/div&gt;
+		&lt;div&gt;3&lt;/div&gt;
+		&lt;div&gt;-&lt;/div&gt;
+		&lt;div&gt;)&lt;/div&gt;
+		&lt;div&gt;.&lt;/div&gt;
+		&lt;div&gt;0&lt;/div&gt;
+		&lt;span id="igual"&gt;=&lt;/span&gt;
+		&lt;div&gt;+&lt;/div&gt;
+		&lt;span id="clear"&gt;C&lt;/span&gt;
+	&lt;/div&gt;
+					</code>
+				</pre>
+
+				<p>styl.css</p>
+
+				<pre>
+					<code>
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+	body {
+		min-height: 100vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-family: monospace;
+		background: linear-gradient(rgb(200, 200, 230), rgb(110, 110, 160));
+	}
+	#container {
+		display: grid;
+		grid-template: repeat(5, 60px) / repeat(5, 60px);
+		box-shadow: 0 0 3px black;
+		border: 1px solid black;
+	}
+	#container > * {
+		border: 1px solid black;
+		text-align: center;
+		font-size: 20px;
+		line-height: 60px;
+		background-color: rgb(110, 110, 160);
+		color: white;
+		cursor: pointer;
+	}
+	#tela {
+		grid-column: span 5;
+		text-align: right;
+		padding-right: 5px;
+		cursor: default;
+		background-color: rgb(180, 180, 220);
+		color: rgb(40, 40, 40);
+		overflow: hidden;
+	}
+	#igual,
+	#clear {
+		background-color: rgb(90, 90, 190);
+		color: white;
+	}
+	#container > *:hover {
+		opacity: 0.8;
+	}
+	#tela:hover {
+		opacity: 1;
+	}
 					</code>
 				</pre>
 			</article>
@@ -217,6 +312,28 @@
 
 		<!--XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-->
 
-		<script src="./src/js/menu.js"></script>
+		<script src="./src/js/menu.js">
+			//RESPOSTA DO EXERCÍCIO
+			/*
+				let tela = document.getElementById("tela");
+				let igual = document.getElementById("igual");
+				let clear = document.getElementById("clear");
+				let teclas = document.querySelectorAll("#container > div");
+
+				igual.addEventListener("click", function() {
+					tela.textContent = eval(tela.textContent);
+				});
+
+				clear.addEventListener("click", function() {
+					tela.textContent = "";
+				});
+
+				for (let i = 0; i < teclas.length; i++) {
+					teclas[i].addEventListener("click", function() {
+						tela.textContent += teclas[i].textContent;
+					});
+				}
+			*/
+		</script>
 	</body>
 </html>
