--- a/projeto.html
+++ b/projeto.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Novotec - Criação de Sites e Plataformas Digitais</title>
     <link rel="stylesheet" href="./src/css/style.css">
-</head>
-<body>
+  </head>
+
+  <body>
     <button id="menu-btn">X</button>
     <nav id="menu">
-        <ul id="menu-ul">
-        </ul>
+      <ul id="menu-ul">
+      </ul>
     </nav>
 
     <!--XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-->
 
     <main>
-        <article>
+      <article>
 
-            <h2>Projeto Integrador</h2>
+        <h2>Projeto Integrador</h2>
 
+        <p>
+          <a href="https://drive.google.com/drive/folders/1hg1LR7w9eq5YzKb-jo602qp5LpQkELKK?usp=sharing"
+            target="_blank">Download dos arquivos.</a>
+        </p>
 
+        <!-- 
             <p>O Projeto Integrador tem como função capacitar o aluno no planejamento e execução de projetos. E procura estimular o aluno a se ineressar pela realidade que o cerca, resolver situações-problema, e responsabilizar-se pela divulgação e utilização de informações.</p>
 
             <p>O projeto será composto de três partes: (<strong>Todos integrantes do grupo devem participar das três partes.</strong>)</p>
@@ -82,15 +89,14 @@
 
             <p><strong>7 - Público-alvo:</strong> Qual grupo de pessoas será o mais interessado em seu tema? Algumas características que podem ser consideradas: idade, gênero, condições econômicas, cultura, gostos, atividades de lazer preferidas, profissão, etc.</p>
 
-            <p><strong>8 - Cronograma:</strong> listar as atividades previstas, estimar o tempo de execução de cada atividade, marcar quando a atividade foi finalizada. Procure modelos de cronograma para facilitar essa etapa.</p>
+            <p><strong>8 - Cronograma:</strong> listar as atividades previstas, estimar o tempo de execução de cada atividade, marcar quando a atividade foi finalizada. Procure modelos de cronograma para facilitar essa etapa.</p> -->
 
-            
-        </article>
+      </article>
     </main>
 
     <!--XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-->
 
-
     <script src="./src/js/menu.js"></script>
-</body>
+  </body>
+
 </html>
